Started to work on testing and fixing some errors.
Fixed errors in manage.py  and worked on styles.css

--- a/customizr/templates/base.html
+++ b/customizr/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<title></title>
+<title>A|X - Customizr</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 
 <body>
